// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button (Highlight) Snapshots renders a large, highlight button with a data label 1`] = `null`;

exports[`Button (Highlight) Snapshots renders a large, highlight button with an icon 1`] = `
.emotion-5 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 13px;
  border-radius: 999px;
  border: 2px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms linear;
  transition: all 120ms linear;
  vertical-align: middle;
  background-color: #f0f1f2;
  border-color: #f0f1f2;
  color: #005cb9;
  min-width: 112px;
  height: 48px;
  padding: 0 18px;
}

.emotion-5:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-5:disabled,
.emotion-5:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-5 span .wd-icon-fill,
.emotion-5 span .wd-icon-accent {
  -webkit-transition: fill 120ms ease-in;
  transition: fill 120ms ease-in;
  fill: #005cb9;
}

.emotion-5:focus {
  background-color: #f0f1f2;
  border-color: transparent;
  color: #005cb9;
}

.emotion-5:focus span .wd-icon-fill,
.emotion-5:focus span .wd-icon-accent {
  fill: #005cb9;
}

.emotion-5:hover:focus {
  background-color: #dfe2e6;
}

.emotion-5:active,
.emotion-5:focus:active,
.emotion-5:hover:active {
  background-color: #ced3d9;
  border-color: transparent;
  color: #005cb9;
}

.emotion-5:active span .wd-icon-fill,
.emotion-5:focus:active span .wd-icon-fill,
.emotion-5:hover:active span .wd-icon-fill,
.emotion-5:active span .wd-icon-accent,
.emotion-5:focus:active span .wd-icon-accent,
.emotion-5:hover:active span .wd-icon-accent {
  fill: #005cb9;
}

.emotion-5:hover {
  background-color: #dfe2e6;
  border-color: transparent;
  color: #005cb9;
}

.emotion-5:hover span .wd-icon-fill,
.emotion-5:hover span .wd-icon-accent {
  fill: #005cb9;
}

.emotion-5:disabled,
.emotion-5:active:disabled,
.emotion-5:focus:disabled,
.emotion-5:hover:disabled {
  background-color: #f6f7f8;
  border-color: transparent;
  color: #a1aab3;
}

.emotion-5:disabled span .wd-icon-fill,
.emotion-5:active:disabled span .wd-icon-fill,
.emotion-5:focus:disabled span .wd-icon-fill,
.emotion-5:hover:disabled span .wd-icon-fill,
.emotion-5:disabled span .wd-icon-accent,
.emotion-5:active:disabled span .wd-icon-accent,
.emotion-5:focus:disabled span .wd-icon-accent,
.emotion-5:hover:disabled span .wd-icon-accent {
  fill: #b9c0c7;
}

.emotion-5:not([disabled]):focus,
.emotion-5:not([disabled]):active {
  border-color: transparent;
  -webkit-animation: animation-1h1pob6 100ms;
  animation: animation-1h1pob6 100ms;
  box-shadow: 0 0 0 2px #ffffff,0 0 0 4px #0875e1;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 8px;
}

.emotion-0 {
  display: inline-block;
}

.emotion-0 svg {
  display: block;
}

.emotion-0 .wd-icon-fill {
  fill: #7b858f;
}

.emotion-0:hover .wd-icon-fill {
  fill: #333d47;
}

.emotion-0 .wd-icon-accent {
  fill: #7b858f;
}

.emotion-0:hover .wd-icon-accent {
  fill: #333d47;
}

.emotion-0 .wd-icon-background {
  fill: transparent;
}

.emotion-0:hover .wd-icon-background {
  fill: transparent;
}

.emotion-0 svg {
  width: 24px;
  height: 24px;
}

.emotion-3 {
  position: relative;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  font-weight: 700;
  font-family: "Roboto","Helvetica Neue","Helvetica","Arial",sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 16px;
  padding: 0 12px;
}

.emotion-3:hover:active {
  background-color: transparent;
}

<button
  className="emotion-5 emotion-6"
>
  <span
    className="emotion-1 emotion-2"
  >
    <span
      className="emotion-0"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-edit wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path d=\\"M4.016 16.14c.002-.271.16-.65.35-.839L16.522 3.146a.5.5 0 0 1 .7-.006l3.548 3.548a.497.497 0 0 1-.006.7L8.61 19.544a1.382 1.382 0 0 1-.839.35l-3.267.016A.502.502 0 0 1 4 19.407l.016-3.267zm11.445-9.105l1.414 1.415 1.414-1.415-1.414-1.414-1.414 1.414z\\" class=\\"wd-icon-background\\"/><path fill-rule=\\"nonzero\\" d=\\"M14.046 8.45L5.93 16.567 6 17.91l1.344.07 8.118-8.117-1.415-1.414zm1.415-1.415l1.414 1.415 1.414-1.415-1.414-1.414-1.414 1.414zM4.016 16.14c.002-.271.16-.65.35-.839L16.522 3.146a.5.5 0 0 1 .7-.006l3.548 3.548a.497.497 0 0 1-.006.7L8.61 19.544a1.382 1.382 0 0 1-.839.35l-3.267.016A.502.502 0 0 1 4 19.407l.016-3.267z\\" class=\\"wd-icon-fill\\"/></g></svg>",
        }
      }
    />
  </span>
  <span
    className="emotion-3 emotion-4"
  >
    Button
  </span>
</button>
`;

exports[`Button (Highlight) Snapshots renders a large, highlight button with an icon 2`] = `
.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 8px;
}

.emotion-0 {
  display: inline-block;
}

.emotion-0 svg {
  display: block;
}

.emotion-0 .wd-icon-fill {
  fill: #7b858f;
}

.emotion-0:hover .wd-icon-fill {
  fill: #333d47;
}

.emotion-0 .wd-icon-accent {
  fill: #7b858f;
}

.emotion-0:hover .wd-icon-accent {
  fill: #333d47;
}

.emotion-0 .wd-icon-background {
  fill: transparent;
}

.emotion-0:hover .wd-icon-background {
  fill: transparent;
}

.emotion-0 svg {
  width: 24px;
  height: 24px;
}

.emotion-3 {
  position: relative;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  font-weight: 700;
  font-family: "Roboto","Helvetica Neue","Helvetica","Arial",sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 16px;
  padding: 0 12px;
}

.emotion-3:hover:active {
  background-color: transparent;
}

.emotion-5 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 13px;
  border-radius: 999px;
  border: 2px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms linear;
  transition: all 120ms linear;
  vertical-align: middle;
  background-color: #f0f1f2;
  border-color: #f0f1f2;
  color: #005cb9;
  min-width: 112px;
  height: 48px;
  padding: 0 18px;
  width: 100%;
  max-width: 100%;
}

.emotion-5:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-5:disabled,
.emotion-5:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-5 span .wd-icon-fill,
.emotion-5 span .wd-icon-accent {
  -webkit-transition: fill 120ms ease-in;
  transition: fill 120ms ease-in;
  fill: #005cb9;
}

.emotion-5:focus {
  background-color: #f0f1f2;
  border-color: transparent;
  color: #005cb9;
}

.emotion-5:focus span .wd-icon-fill,
.emotion-5:focus span .wd-icon-accent {
  fill: #005cb9;
}

.emotion-5:hover:focus {
  background-color: #dfe2e6;
}

.emotion-5:active,
.emotion-5:focus:active,
.emotion-5:hover:active {
  background-color: #ced3d9;
  border-color: transparent;
  color: #005cb9;
}

.emotion-5:active span .wd-icon-fill,
.emotion-5:focus:active span .wd-icon-fill,
.emotion-5:hover:active span .wd-icon-fill,
.emotion-5:active span .wd-icon-accent,
.emotion-5:focus:active span .wd-icon-accent,
.emotion-5:hover:active span .wd-icon-accent {
  fill: #005cb9;
}

.emotion-5:hover {
  background-color: #dfe2e6;
  border-color: transparent;
  color: #005cb9;
}

.emotion-5:hover span .wd-icon-fill,
.emotion-5:hover span .wd-icon-accent {
  fill: #005cb9;
}

.emotion-5:disabled,
.emotion-5:active:disabled,
.emotion-5:focus:disabled,
.emotion-5:hover:disabled {
  background-color: #f6f7f8;
  border-color: transparent;
  color: #a1aab3;
}

.emotion-5:disabled span .wd-icon-fill,
.emotion-5:active:disabled span .wd-icon-fill,
.emotion-5:focus:disabled span .wd-icon-fill,
.emotion-5:hover:disabled span .wd-icon-fill,
.emotion-5:disabled span .wd-icon-accent,
.emotion-5:active:disabled span .wd-icon-accent,
.emotion-5:focus:disabled span .wd-icon-accent,
.emotion-5:hover:disabled span .wd-icon-accent {
  fill: #b9c0c7;
}

.emotion-5:not([disabled]):focus,
.emotion-5:not([disabled]):active {
  border-color: transparent;
  -webkit-animation: animation-1h1pob6 100ms;
  animation: animation-1h1pob6 100ms;
  box-shadow: 0 0 0 2px #ffffff,0 0 0 4px #0875e1;
}

<button
  className="emotion-5 emotion-6"
>
  <span
    className="emotion-1 emotion-2"
  >
    <span
      className="emotion-0"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-edit wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path d=\\"M4.016 16.14c.002-.271.16-.65.35-.839L16.522 3.146a.5.5 0 0 1 .7-.006l3.548 3.548a.497.497 0 0 1-.006.7L8.61 19.544a1.382 1.382 0 0 1-.839.35l-3.267.016A.502.502 0 0 1 4 19.407l.016-3.267zm11.445-9.105l1.414 1.415 1.414-1.415-1.414-1.414-1.414 1.414z\\" class=\\"wd-icon-background\\"/><path fill-rule=\\"nonzero\\" d=\\"M14.046 8.45L5.93 16.567 6 17.91l1.344.07 8.118-8.117-1.415-1.414zm1.415-1.415l1.414 1.415 1.414-1.415-1.414-1.414-1.414 1.414zM4.016 16.14c.002-.271.16-.65.35-.839L16.522 3.146a.5.5 0 0 1 .7-.006l3.548 3.548a.497.497 0 0 1-.006.7L8.61 19.544a1.382 1.382 0 0 1-.839.35l-3.267.016A.502.502 0 0 1 4 19.407l.016-3.267z\\" class=\\"wd-icon-fill\\"/></g></svg>",
        }
      }
    />
  </span>
  <span
    className="emotion-3 emotion-4"
  >
    Button
  </span>
</button>
`;

exports[`Button (Highlight) Snapshots renders a large, highlight button with an icon and data label 1`] = `
.emotion-7 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 13px;
  border-radius: 999px;
  border: 2px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms linear;
  transition: all 120ms linear;
  vertical-align: middle;
  background-color: #f0f1f2;
  border-color: #f0f1f2;
  color: #005cb9;
  min-width: 112px;
  height: 48px;
  padding: 0 18px;
}

.emotion-7:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-7:disabled,
.emotion-7:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-7 span .wd-icon-fill,
.emotion-7 span .wd-icon-accent {
  -webkit-transition: fill 120ms ease-in;
  transition: fill 120ms ease-in;
  fill: #005cb9;
}

.emotion-7:focus {
  background-color: #f0f1f2;
  border-color: transparent;
  color: #005cb9;
}

.emotion-7:focus span .wd-icon-fill,
.emotion-7:focus span .wd-icon-accent {
  fill: #005cb9;
}

.emotion-7:hover:focus {
  background-color: #dfe2e6;
}

.emotion-7:active,
.emotion-7:focus:active,
.emotion-7:hover:active {
  background-color: #ced3d9;
  border-color: transparent;
  color: #005cb9;
}

.emotion-7:active span .wd-icon-fill,
.emotion-7:focus:active span .wd-icon-fill,
.emotion-7:hover:active span .wd-icon-fill,
.emotion-7:active span .wd-icon-accent,
.emotion-7:focus:active span .wd-icon-accent,
.emotion-7:hover:active span .wd-icon-accent {
  fill: #005cb9;
}

.emotion-7:hover {
  background-color: #dfe2e6;
  border-color: transparent;
  color: #005cb9;
}

.emotion-7:hover span .wd-icon-fill,
.emotion-7:hover span .wd-icon-accent {
  fill: #005cb9;
}

.emotion-7:disabled,
.emotion-7:active:disabled,
.emotion-7:focus:disabled,
.emotion-7:hover:disabled {
  background-color: #f6f7f8;
  border-color: transparent;
  color: #a1aab3;
}

.emotion-7:disabled span .wd-icon-fill,
.emotion-7:active:disabled span .wd-icon-fill,
.emotion-7:focus:disabled span .wd-icon-fill,
.emotion-7:hover:disabled span .wd-icon-fill,
.emotion-7:disabled span .wd-icon-accent,
.emotion-7:active:disabled span .wd-icon-accent,
.emotion-7:focus:disabled span .wd-icon-accent,
.emotion-7:hover:disabled span .wd-icon-accent {
  fill: #b9c0c7;
}

.emotion-7:not([disabled]):focus,
.emotion-7:not([disabled]):active {
  border-color: transparent;
  -webkit-animation: animation-1h1pob6 100ms;
  animation: animation-1h1pob6 100ms;
  box-shadow: 0 0 0 2px #ffffff,0 0 0 4px #0875e1;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 8px;
}

.emotion-0 {
  display: inline-block;
}

.emotion-0 svg {
  display: block;
}

.emotion-0 .wd-icon-fill {
  fill: #7b858f;
}

.emotion-0:hover .wd-icon-fill {
  fill: #333d47;
}

.emotion-0 .wd-icon-accent {
  fill: #7b858f;
}

.emotion-0:hover .wd-icon-accent {
  fill: #333d47;
}

.emotion-0 .wd-icon-background {
  fill: transparent;
}

.emotion-0:hover .wd-icon-background {
  fill: transparent;
}

.emotion-0 svg {
  width: 24px;
  height: 24px;
}

.emotion-3 {
  position: relative;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  font-weight: 700;
  font-family: "Roboto","Helvetica Neue","Helvetica","Arial",sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 16px;
  padding: 0 12px;
}

.emotion-3:hover:active {
  background-color: transparent;
}

.emotion-5 {
  position: relative;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  font-weight: 400;
  font-family: "Roboto","Helvetica Neue","Helvetica","Arial",sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 16px;
  padding-right: 12px;
}

.emotion-5:hover:active {
  background-color: transparent;
}

<button
  className="emotion-7 emotion-8"
>
  <span
    className="emotion-1 emotion-2"
  >
    <span
      className="emotion-0"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-edit wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path d=\\"M4.016 16.14c.002-.271.16-.65.35-.839L16.522 3.146a.5.5 0 0 1 .7-.006l3.548 3.548a.497.497 0 0 1-.006.7L8.61 19.544a1.382 1.382 0 0 1-.839.35l-3.267.016A.502.502 0 0 1 4 19.407l.016-3.267zm11.445-9.105l1.414 1.415 1.414-1.415-1.414-1.414-1.414 1.414z\\" class=\\"wd-icon-background\\"/><path fill-rule=\\"nonzero\\" d=\\"M14.046 8.45L5.93 16.567 6 17.91l1.344.07 8.118-8.117-1.415-1.414zm1.415-1.415l1.414 1.415 1.414-1.415-1.414-1.414-1.414 1.414zM4.016 16.14c.002-.271.16-.65.35-.839L16.522 3.146a.5.5 0 0 1 .7-.006l3.548 3.548a.497.497 0 0 1-.006.7L8.61 19.544a1.382 1.382 0 0 1-.839.35l-3.267.016A.502.502 0 0 1 4 19.407l.016-3.267z\\" class=\\"wd-icon-fill\\"/></g></svg>",
        }
      }
    />
  </span>
  <span
    className="emotion-3 emotion-4"
  >
    Button
  </span>
  <span
    className="button-label-data emotion-5 emotion-6"
  >
    1:00
  </span>
</button>
`;

exports[`Button (Highlight) Snapshots renders a medium, highlight button with an icon 1`] = `
.emotion-0 {
  display: inline-block;
}

.emotion-0 svg {
  display: block;
}

.emotion-0 .wd-icon-fill {
  fill: #7b858f;
}

.emotion-0:hover .wd-icon-fill {
  fill: #333d47;
}

.emotion-0 .wd-icon-accent {
  fill: #7b858f;
}

.emotion-0:hover .wd-icon-accent {
  fill: #333d47;
}

.emotion-0 .wd-icon-background {
  fill: transparent;
}

.emotion-0:hover .wd-icon-background {
  fill: transparent;
}

.emotion-0 svg {
  width: 24px;
  height: 24px;
}

.emotion-5 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 13px;
  border-radius: 999px;
  border: 2px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms linear;
  transition: all 120ms linear;
  vertical-align: middle;
  background-color: #f0f1f2;
  border-color: #f0f1f2;
  color: #005cb9;
  min-width: 96px;
  height: 40px;
  padding: 0 14px;
}

.emotion-5:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-5:disabled,
.emotion-5:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-5 span .wd-icon-fill,
.emotion-5 span .wd-icon-accent {
  -webkit-transition: fill 120ms ease-in;
  transition: fill 120ms ease-in;
  fill: #005cb9;
}

.emotion-5:focus {
  background-color: #f0f1f2;
  border-color: transparent;
  color: #005cb9;
}

.emotion-5:focus span .wd-icon-fill,
.emotion-5:focus span .wd-icon-accent {
  fill: #005cb9;
}

.emotion-5:hover:focus {
  background-color: #dfe2e6;
}

.emotion-5:active,
.emotion-5:focus:active,
.emotion-5:hover:active {
  background-color: #ced3d9;
  border-color: transparent;
  color: #005cb9;
}

.emotion-5:active span .wd-icon-fill,
.emotion-5:focus:active span .wd-icon-fill,
.emotion-5:hover:active span .wd-icon-fill,
.emotion-5:active span .wd-icon-accent,
.emotion-5:focus:active span .wd-icon-accent,
.emotion-5:hover:active span .wd-icon-accent {
  fill: #005cb9;
}

.emotion-5:hover {
  background-color: #dfe2e6;
  border-color: transparent;
  color: #005cb9;
}

.emotion-5:hover span .wd-icon-fill,
.emotion-5:hover span .wd-icon-accent {
  fill: #005cb9;
}

.emotion-5:disabled,
.emotion-5:active:disabled,
.emotion-5:focus:disabled,
.emotion-5:hover:disabled {
  background-color: #f6f7f8;
  border-color: transparent;
  color: #a1aab3;
}

.emotion-5:disabled span .wd-icon-fill,
.emotion-5:active:disabled span .wd-icon-fill,
.emotion-5:focus:disabled span .wd-icon-fill,
.emotion-5:hover:disabled span .wd-icon-fill,
.emotion-5:disabled span .wd-icon-accent,
.emotion-5:active:disabled span .wd-icon-accent,
.emotion-5:focus:disabled span .wd-icon-accent,
.emotion-5:hover:disabled span .wd-icon-accent {
  fill: #b9c0c7;
}

.emotion-5:not([disabled]):focus,
.emotion-5:not([disabled]):active {
  border-color: transparent;
  -webkit-animation: animation-1h1pob6 100ms;
  animation: animation-1h1pob6 100ms;
  box-shadow: 0 0 0 2px #ffffff,0 0 0 4px #0875e1;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 4px;
}

.emotion-3 {
  position: relative;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  font-weight: 700;
  font-family: "Roboto","Helvetica Neue","Helvetica","Arial",sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 14px;
  padding: 0 8px;
}

.emotion-3:hover:active {
  background-color: transparent;
}

<button
  className="emotion-5 emotion-6"
>
  <span
    className="emotion-1 emotion-2"
  >
    <span
      className="emotion-0"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-edit wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path d=\\"M4.016 16.14c.002-.271.16-.65.35-.839L16.522 3.146a.5.5 0 0 1 .7-.006l3.548 3.548a.497.497 0 0 1-.006.7L8.61 19.544a1.382 1.382 0 0 1-.839.35l-3.267.016A.502.502 0 0 1 4 19.407l.016-3.267zm11.445-9.105l1.414 1.415 1.414-1.415-1.414-1.414-1.414 1.414z\\" class=\\"wd-icon-background\\"/><path fill-rule=\\"nonzero\\" d=\\"M14.046 8.45L5.93 16.567 6 17.91l1.344.07 8.118-8.117-1.415-1.414zm1.415-1.415l1.414 1.415 1.414-1.415-1.414-1.414-1.414 1.414zM4.016 16.14c.002-.271.16-.65.35-.839L16.522 3.146a.5.5 0 0 1 .7-.006l3.548 3.548a.497.497 0 0 1-.006.7L8.61 19.544a1.382 1.382 0 0 1-.839.35l-3.267.016A.502.502 0 0 1 4 19.407l.016-3.267z\\" class=\\"wd-icon-fill\\"/></g></svg>",
        }
      }
    />
  </span>
  <span
    className="emotion-3 emotion-4"
  >
    Button
  </span>
</button>
`;

exports[`Button (Highlight) Snapshots renders a medium, highlight button with an icon and a data label 1`] = `
.emotion-0 {
  display: inline-block;
}

.emotion-0 svg {
  display: block;
}

.emotion-0 .wd-icon-fill {
  fill: #7b858f;
}

.emotion-0:hover .wd-icon-fill {
  fill: #333d47;
}

.emotion-0 .wd-icon-accent {
  fill: #7b858f;
}

.emotion-0:hover .wd-icon-accent {
  fill: #333d47;
}

.emotion-0 .wd-icon-background {
  fill: transparent;
}

.emotion-0:hover .wd-icon-background {
  fill: transparent;
}

.emotion-0 svg {
  width: 24px;
  height: 24px;
}

.emotion-7 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 13px;
  border-radius: 999px;
  border: 2px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms linear;
  transition: all 120ms linear;
  vertical-align: middle;
  background-color: #f0f1f2;
  border-color: #f0f1f2;
  color: #005cb9;
  min-width: 96px;
  height: 40px;
  padding: 0 14px;
}

.emotion-7:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-7:disabled,
.emotion-7:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-7 span .wd-icon-fill,
.emotion-7 span .wd-icon-accent {
  -webkit-transition: fill 120ms ease-in;
  transition: fill 120ms ease-in;
  fill: #005cb9;
}

.emotion-7:focus {
  background-color: #f0f1f2;
  border-color: transparent;
  color: #005cb9;
}

.emotion-7:focus span .wd-icon-fill,
.emotion-7:focus span .wd-icon-accent {
  fill: #005cb9;
}

.emotion-7:hover:focus {
  background-color: #dfe2e6;
}

.emotion-7:active,
.emotion-7:focus:active,
.emotion-7:hover:active {
  background-color: #ced3d9;
  border-color: transparent;
  color: #005cb9;
}

.emotion-7:active span .wd-icon-fill,
.emotion-7:focus:active span .wd-icon-fill,
.emotion-7:hover:active span .wd-icon-fill,
.emotion-7:active span .wd-icon-accent,
.emotion-7:focus:active span .wd-icon-accent,
.emotion-7:hover:active span .wd-icon-accent {
  fill: #005cb9;
}

.emotion-7:hover {
  background-color: #dfe2e6;
  border-color: transparent;
  color: #005cb9;
}

.emotion-7:hover span .wd-icon-fill,
.emotion-7:hover span .wd-icon-accent {
  fill: #005cb9;
}

.emotion-7:disabled,
.emotion-7:active:disabled,
.emotion-7:focus:disabled,
.emotion-7:hover:disabled {
  background-color: #f6f7f8;
  border-color: transparent;
  color: #a1aab3;
}

.emotion-7:disabled span .wd-icon-fill,
.emotion-7:active:disabled span .wd-icon-fill,
.emotion-7:focus:disabled span .wd-icon-fill,
.emotion-7:hover:disabled span .wd-icon-fill,
.emotion-7:disabled span .wd-icon-accent,
.emotion-7:active:disabled span .wd-icon-accent,
.emotion-7:focus:disabled span .wd-icon-accent,
.emotion-7:hover:disabled span .wd-icon-accent {
  fill: #b9c0c7;
}

.emotion-7:not([disabled]):focus,
.emotion-7:not([disabled]):active {
  border-color: transparent;
  -webkit-animation: animation-1h1pob6 100ms;
  animation: animation-1h1pob6 100ms;
  box-shadow: 0 0 0 2px #ffffff,0 0 0 4px #0875e1;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 4px;
}

.emotion-3 {
  position: relative;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  font-weight: 700;
  font-family: "Roboto","Helvetica Neue","Helvetica","Arial",sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 14px;
  padding: 0 8px;
}

.emotion-3:hover:active {
  background-color: transparent;
}

.emotion-5 {
  position: relative;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  font-weight: 400;
  font-family: "Roboto","Helvetica Neue","Helvetica","Arial",sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 16px;
  padding-right: 8px;
  font-size: 14px;
}

.emotion-5:hover:active {
  background-color: transparent;
}

<button
  className="emotion-7 emotion-8"
>
  <span
    className="emotion-1 emotion-2"
  >
    <span
      className="emotion-0"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-edit wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path d=\\"M4.016 16.14c.002-.271.16-.65.35-.839L16.522 3.146a.5.5 0 0 1 .7-.006l3.548 3.548a.497.497 0 0 1-.006.7L8.61 19.544a1.382 1.382 0 0 1-.839.35l-3.267.016A.502.502 0 0 1 4 19.407l.016-3.267zm11.445-9.105l1.414 1.415 1.414-1.415-1.414-1.414-1.414 1.414z\\" class=\\"wd-icon-background\\"/><path fill-rule=\\"nonzero\\" d=\\"M14.046 8.45L5.93 16.567 6 17.91l1.344.07 8.118-8.117-1.415-1.414zm1.415-1.415l1.414 1.415 1.414-1.415-1.414-1.414-1.414 1.414zM4.016 16.14c.002-.271.16-.65.35-.839L16.522 3.146a.5.5 0 0 1 .7-.006l3.548 3.548a.497.497 0 0 1-.006.7L8.61 19.544a1.382 1.382 0 0 1-.839.35l-3.267.016A.502.502 0 0 1 4 19.407l.016-3.267z\\" class=\\"wd-icon-fill\\"/></g></svg>",
        }
      }
    />
  </span>
  <span
    className="emotion-3 emotion-4"
  >
    Button
  </span>
  <span
    className="button-label-data emotion-5 emotion-6"
  >
    1:00
  </span>
</button>
`;
